--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a href="#about">About</a>
           </li>
         </ul>
+        
       </div>
     </header>
     <main>
@@ -74,61 +75,58 @@
       <section class="project" id="project-1">
         <div class="left-side-text">
           <h1>Projects</h1>
-          <h2>Correio Secreto</h2>
-          <h3>
-            Correio Secreto is a web based application that allows users to send
-            anonymous messages to their secret loves, friends or disagreements.
-          </h3>
+          <div class="project-text">
+            <h2>Correio Secreto</h2>
+            <h3>
+              Correio Secreto is a web based application that allows users to send anonymous messages to their secret loves, friends or disagreements.
+            </h3>
+          </div>
         </div>
         <div class="rigth-side-screenshot">
-          <img src="./assets/scrreenshot.png" alt="" />
+          <img src="./assets/screenshot.png" alt="" />
         </div>
       </section>
       <section class="project" id="project-2">
         <div class="rigth-side-text">
-          <h2>Correio Secreto</h2>
-          <h3>Correio Secreto is a web based application that allows users to send
-            anonymous messages to their secret loves, friends or disagreements.</h3>
+          <h2>VKBot</h2>
+          <h3>VKBot is an utility bot that allows you to automate actions related to groups on the VKontakte social network. The bot interacts directly with the users of the group and responds to their requests.
+          </h3>
           </h3>
         </div>
         <div class="left-side-screenshot">
-          <img src="./assets/scrreenshot.png" alt="" />
+          <img src="./assets/screenshot-2.png" alt="" />
         </div>
       </section>
       <section class="project" id="project-3">
         <div class="left-side-text">
-          <h2>Correio Secreto</h2>
+          <h2>PodcastHub</h2>
           <h3>
-            Correio Secreto is a web based application that allows users to send
-            anonymous messages to their secret loves, friends or disagreements.
+            PodcastHub is a complete podcast aggregator on the web. Users can see the most listened podcasts, search by name or by categories. It also users to follow their favorite podcasts, create their own categories and even comment on their episodes, interacting with other users.
           </h3>
         </div>
         <div class="rigth-side-screenshot">
-          <img src="./assets/scrreenshot.png" alt="" />
+          <img src="./assets/screenshot-3.png" alt="" />
         </div>
       </section>
       <section class="project" id="project-4">
         <div class="rigth-side-text">
-          <h2>Correio Secreto</h2>
+          <h2>Simplus</h2>
           <h3>
-            Correio Secreto is a web based application that allows users to send
-            anonymous messages to their secret loves, friends or disagreements.
+            Simplus is cross-platform application made specially to make your life easier. It can register costumers, payments and receivements. Everything saved on the cloud and exlusive to your own account.
           </h3>
         </div>
         <div class="left-side-screenshot">
-          <img src="./assets/scrreenshot.png" alt="" />
+          <img src="./assets/screenshot-4.png" alt="" />
         </div>
       </section>
       <section class="project" id="project-5">
         <div class="left-side-text">
-          <h2>Correio Secreto</h2>
-          <h3>
-            Correio Secreto is a web based application that allows users to send
-            anonymous messages to their secret loves, friends or disagreements.
+          <h2>VersatilCRM</h2>
+          <h3>VersatilCRM is a complete multi-user CRM that can be used to manage customers, sales, payments and receipts with different databases for each user. VersatilCRM uses all the data generated to create graphs that show a historical and future overview of the company's situation.
           </h3>
         </div>
         <div class="rigth-side-screenshot">
-          <img src="./assets/scrreenshot.png" alt="" />
+          <img src="./assets/screenshot-5.png" alt="" />
         </div>
       </section>
       <section class="technologies" id="technologies">
@@ -197,7 +195,7 @@
       </section>
       <section class="about" id="about">
           <h1>About</h1>
-          <h2>I'm a self-taught fullstack developer in love with programming. I'm used to working with the newest technologies in the marketing, and I love to turn ideas into real world projects. The capacity to conceive something in your mind and bring it to real life is far more powerful than most people realize, and I just love being able to do it.</h2>
+          <h2>I'm a fullstack developer in love with programming. I'm used to working with the newest technologies in the marketing, and I love to turn ideas into real world projects. The capacity to conceive something in your mind and bring it to real life is far more powerful than most people realize, and I just love being able to do it.</h2>
           <a class="cv-btn" href="./assets/cv.pdf" download="Jonathas Gouveia - CV" target="_blank">Download CV</a>
       </section>
     </main>
