adds 'learn more' button

--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
             <h2>
               A fullstack developer turning ideas into real world projects.
             </h2>
-            <a href="#"
+            <a href="https://github.com/jonathasgouv" target="_blank" rel="noopener noreferrer"
               ><img class="icons" src="./assets/github.svg" alt=""
             /></a>
-            <a href="#"
+            <a href="https://www.linkedin.com/in/jonathasgouv/" target="_blank" rel="noopener noreferrer"
               ><img class="icons" src="./assets/linkedin.svg" alt=""
+            /></a>
+            <a href="mailto:jonathas_gouv@hotmail.com"
+              ><img class="icons" src="./assets/email.svg" alt=""
             /></a>
           </div>
           <div class="cta">
@@ -80,6 +83,7 @@
             <h3>
               Correio Secreto is a web based application that allows users to send anonymous messages to their secret loves, friends or disagreements.
             </h3>
+            <a href="https://github.com/jonathasgouv/correiosecreto" target="_blank" rel="noopener noreferrer">Learn more</a>
           </div>
         </div>
         <div class="rigth-side-screenshot">
@@ -91,7 +95,7 @@
           <h2>VKBot</h2>
           <h3>VKBot is an utility bot that allows you to automate actions related to groups on the VKontakte social network. The bot interacts directly with the users of the group and responds to their requests.
           </h3>
-          </h3>
+          <a href="https://github.com/jonathasgouv/VKBot" target="_blank" rel="noopener noreferrer">Learn more</a>
         </div>
         <div class="left-side-screenshot">
           <img src="./assets/screenshot-2.png" alt="" />
@@ -103,6 +107,7 @@
           <h3>
             PodcastHub is a complete podcast aggregator on the web. Users can see the most listened podcasts, search by name or by categories. It also users to follow their favorite podcasts, create their own categories and even comment on their episodes, interacting with other users.
           </h3>
+          <a href="https://github.com/jonathasgouv/podcasthub" target="_blank" rel="noopener noreferrer">Learn more</a>
         </div>
         <div class="rigth-side-screenshot">
           <img src="./assets/screenshot-3.png" alt="" />
@@ -114,6 +119,7 @@
           <h3>
             Simplus is cross-platform application made specially to make your life easier. It can register costumers, payments and receivements. Everything saved on the cloud and exlusive to your own account.
           </h3>
+          <a href="https://github.com/jonathasgouv/Simplus" target="_blank" rel="noopener noreferrer">Learn more</a>
         </div>
         <div class="left-side-screenshot">
           <img src="./assets/screenshot-4.png" alt="" />
@@ -124,13 +130,14 @@
           <h2>VersatilCRM</h2>
           <h3>VersatilCRM is a complete multi-user CRM that can be used to manage customers, sales, payments and receipts with different databases for each user. VersatilCRM uses all the data generated to create graphs that show a historical and future overview of the company's situation.
           </h3>
+          <a href="https://github.com/jonathasgouv/versatil-CRM" target="_blank" rel="noopener noreferrer">Learn more</a>
         </div>
         <div class="rigth-side-screenshot">
           <img src="./assets/screenshot-5.png" alt="" />
         </div>
       </section>
       <section class="technologies" id="technologies">
-        <h1>Technologies</h1>
+        <h1>Techno&shy;logies</h1>
             <img class="balls2" src="./assets/balls2.svg" alt="" />
             <div class="items">
                 <div class="roll">
