adds portuguese version

--- a/portuguese.html
+++ b/portuguese.html
@@ -14,13 +14,13 @@
         <a href="/"><img src="./assets/logo.svg" alt="" /></a>
         <ul>
           <li>
-            <a href="#project-1">Projects</a>
+            <a href="#project-1">Projetos</a>
           </li>
           <li>
-            <a href="#technologies">Technologies</a>
+            <a href="#technologies">Tecnologias</a>
           </li>
           <li>
-            <a href="#about">About</a>
+            <a href="#about">Sobre</a>
           </li>
         </ul>
         
@@ -31,9 +31,9 @@
         <img src="./assets/balls.svg" alt="" class="balls" />
         <div class="hero">
           <div class="headline">
-            <h1>Hi, i’m Jonathas</h1>
+            <h1>Oi, sou o Jônathas</h1>
             <h2>
-              A fullstack developer turning ideas into real world projects.
+              Um desenvolvedor fullstack transformando ideias em projetos reais.
             </h2>
             <a href="https://github.com/jonathasgouv" target="_blank" rel="noopener noreferrer"
               ><img class="icons" src="./assets/github.svg" alt=""
@@ -71,17 +71,17 @@
                 fill="white"
               />
             </svg>
-            <h3>Learn more</h3>
+            <h3>Saiba mais</h3>
           </div>
         </div>
       </section>
       <section class="project" id="project-1">
         <div class="left-side-text">
-          <h1>Projects</h1>
+          <h1>Projetos</h1>
           <div class="project-text">
             <h2>Correio Secreto</h2>
             <h3>
-              Correio Secreto is a web based application that allows users to send anonymous messages to their secret loves, friends or disagreements.
+              Correio Secreto é um aplicativo web que permite aos usuários enviar mensagens anônimas para seus amores, amigos ou desentendimentos secretos.
             </h3>
             <a href="https://github.com/jonathasgouv/correiosecreto" target="_blank" rel="noopener noreferrer">Learn more</a>
           </div>
@@ -93,7 +93,8 @@
       <section class="project" id="project-2">
         <div class="rigth-side-text">
           <h2>VKBot</h2>
-          <h3>VKBot is an utility bot that allows you to automate actions related to groups on the VKontakte social network. The bot interacts directly with the users of the group and responds to their requests.
+          <h3>
+            VKBot é um bot utilitário que permite automatizar ações relacionadas a grupos na rede social VKontakte. O bot interage diretamente com os usuários do grupo e responde às suas solicitações.
           </h3>
           <a href="https://github.com/jonathasgouv/VKBot" target="_blank" rel="noopener noreferrer">Learn more</a>
         </div>
@@ -105,8 +106,7 @@
         <div class="left-side-text">
           <h2>PodcastHub</h2>
           <h3>
-            PodcastHub is a complete podcast aggregator on the web. Users can see the most listened podcasts, search by name or by categories. It also users to follow their favorite podcasts, create their own categories and even comment on their episodes, interacting with other users.
-          </h3>
+            O PodcastHub é um agregador de podcast completo na web. Os usuários podem ver os podcasts mais ouvidos, pesquisar por nome ou por categorias. Também permite aos usuários acompanhar seus podcasts favoritos, criar suas próprias categorias e até comentar seus episódios, interagindo com outros usuários.          </h3>
           <a href="https://github.com/jonathasgouv/podcasthub" target="_blank" rel="noopener noreferrer">Learn more</a>
         </div>
         <div class="rigth-side-screenshot">
@@ -117,7 +117,7 @@
         <div class="rigth-side-text">
           <h2>Simplus</h2>
           <h3>
-            Simplus is cross-platform application made specially to make your life easier. It can register costumers, payments and receivements. Everything saved on the cloud and exlusive to your own account.
+            Simplus é um aplicativo multiplataforma feito especialmente para tornar sua vida mais fácil. Pode cadastrar clientes, pagamentos e recebimentos. Tudo salvo na nuvem e exclusivo para sua conta.
           </h3>
           <a href="https://github.com/jonathasgouv/Simplus" target="_blank" rel="noopener noreferrer">Learn more</a>
         </div>
@@ -128,7 +128,8 @@
       <section class="project" id="project-5">
         <div class="left-side-text">
           <h2>VersatilCRM</h2>
-          <h3>VersatilCRM is a complete multi-user CRM that can be used to manage customers, sales, payments and receipts with different databases for each user. VersatilCRM uses all the data generated to create graphs that show a historical and future overview of the company's situation.
+          <h3>
+            VersatilCRM é um CRM multiusuário completo que pode ser usado para gerenciar clientes, vendas, pagamentos e recebimentos com diferentes bancos de dados para cada usuário. VersatilCRM usa todos os dados gerados para criar gráficos que mostram uma visão geral histórica e futura da situação da empresa.
           </h3>
           <a href="https://github.com/jonathasgouv/versatil-CRM" target="_blank" rel="noopener noreferrer">Learn more</a>
         </div>
@@ -137,7 +138,7 @@
         </div>
       </section>
       <section class="technologies" id="technologies">
-        <h1>Techno&shy;logies</h1>
+        <h1>Tecno&shy;logias</h1>
             <img class="balls2" src="./assets/balls2.svg" alt="" />
             <div class="items">
                 <div class="roll">
@@ -201,9 +202,11 @@
         </div>
       </section>
       <section class="about" id="about">
-          <h1>About</h1>
-          <h2>I'm a fullstack developer in love with programming. I'm used to working with the newest technologies in the market, and I love to turn ideas into real world projects. The capacity to conceive something in your mind and bring it to real life is far more powerful than most people realize, and I just love being able to do it.</h2>
-          <a class="cv-btn" href="./assets/cv.pdf" download="Jonathas Gouveia - CV" target="_blank">Download CV</a>
+          <h1>Sobre</h1>
+          <h2>
+            Sou um desenvolvedor fullstack apaixonado por programação. Estou acostumado a trabalhar com as tecnologias mais recentes do mercado e adoro transformar ideias em projetos do mundo real. A capacidade de imaginar algo na sua mente e trazê-la para a realidade é muito mais poderosa do que a maioria das pessoas pode imaginar, e eu amo ser capaz de fazer isso.
+          </h2>
+          <a class="cv-btn" href="./assets/cv.pdf" download="Jonathas Gouveia - CV" target="_blank">Baixar CV</a>
       </section>
     </main>
   </body>
