adds favicon and metatags

--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jônathas Gouveia</title>
+    <title>Jonathas Gouveia</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
+    <meta property="og:title" content="Jonathas Gouveia">
+    <meta property="og:description" content="A fullstack developer turning ideas into real world projects.">
+    <meta property="og:image" content="./assets/meta-bg.png">
+    <meta name="twitter:title" content="Jonathas Gouveia">
+    <meta name="twitter:description" content="A fullstack developer turning ideas into real world projects.">
+    <meta name="twitter:image" content="./assets/meta-bg.png">
+    <meta name="twitter:card" content="summary_large_image">
   </head>
   <body>
     <header>
-      <div class="navbar">
+      <nav class="navbar">
         <a href="/"><img src="./assets/logo.svg" alt="" /></a>
         <ul>
           <li>
@@ -24,7 +32,7 @@
           </li>
         </ul>
         
-      </div>
+      </nav>
     </header>
     <main>
       <section class="section-1">
