--- a/portuguese.html
+++ b/portuguese.html
@@ -5,12 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jônathas Gouveia</title>
+    <meta property="og:title" content="Jônathas Gouveia">
+    <meta property="og:description" content="Um desenvolvedor fullstack transformando ideias em projetos reais.">
+    <meta property="og:image" content="./assets/meta-bg.png">
+    <meta name="twitter:title" content="Jonathas Gouveia">
+    <meta name="twitter:description" content="Um desenvolvedor fullstack transformando ideias em projetos reais.">
+    <meta name="twitter:image" content="./assets/meta-bg.png">
+    <meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="favicon.svg" type="image/x-icon">
   </head>
   <body>
     <header>
-      <div class="navbar">
+      <nav class="navbar">
         <a href="/"><img src="./assets/logo.svg" alt="" /></a>
         <ul>
           <li>
@@ -24,7 +32,7 @@
           </li>
         </ul>
         
-      </div>
+      </nav>
     </header>
     <main>
       <section class="section-1">
