adds portuguese cv

--- a/portuguese.html
+++ b/portuguese.html
@@ -214,7 +214,7 @@
           <h2>
             Sou um desenvolvedor fullstack apaixonado por programação. Estou acostumado a trabalhar com as tecnologias mais recentes do mercado e adoro transformar ideias em projetos do mundo real. A capacidade de imaginar algo na sua mente e trazê-la para a realidade é muito mais poderosa do que a maioria das pessoas pode imaginar, e eu amo ser capaz de fazer isso.
           </h2>
-          <a class="cv-btn" href="./assets/cv.pdf" download="Jonathas Gouveia - CV" target="_blank">Baixar CV</a>
+          <a class="cv-btn" href="./assets/cv_pt.pdf" download="Jonathas Gouveia - CV" target="_blank">Baixar CV</a>
       </section>
     </main>
   </body>
